--- a/TFM_tex/biblio.bib
+++ b/TFM_tex/biblio.bib
@@ -1,3 +1,33 @@
+@article{batchSize,
+      title={Don't Decay the Learning Rate, Increase the Batch Size}, 
+      author={Samuel L. Smith and Pieter-Jan Kindermans and Chris Ying and Quoc V. Le},
+      year={2018},
+      journal={International Conference on Learning Representations},
+      eprint={1711.00489},
+      archivePrefix={arXiv},
+      primaryClass={id='cs.LG' full_name='Machine Learning' is_active=True alt_name=None in_archive='cs' is_general=False description='Papers on all aspects of machine learning research (supervised, unsupervised, reinforcement learning, bandit problems, and so on) including also robustness, explanation, fairness, and methodology. cs.LG is also an appropriate primary category for applications of machine learning methods.'}
+}
+
+@article{adam,
+      title={Adam: A Method for Stochastic Optimization}, 
+      author={Diederik P. Kingma and Jimmy Ba},
+      year={2017},
+      eprint={1412.6980},
+      archivePrefix={arXiv},
+      journal = {International Conference on Learning Representations},
+      primaryClass={cs.LG}
+}
+
+@techreport{datosObtencion,
+  author       = {Ayensa Jim{\'e}nez, Jacobo and Doblar{\'e}, Manuel},
+  title        = {PAQUETE DE TRABAJO 7. CRIBADO Y VIGILANCIA ACTIVA EN C{\'A}NCERES PREVALENTES DE LA 3{\textsuperscript{a}} EDAD: Informe sobre la Tarea A69. Diagn{\'o}stico automatizado del grado Gleason en biopsias de pr{\'o}stata mediante inteligencia artificial},
+  institution  = {Iniciativa AI4HealthyAging},
+  type         = {Informe t{\'e}cnico},
+  number       = {Tarea A69},
+  year         = {2024},
+}
+
+
 @article{distill,
 author = {Olah, Chris and Mordvintsev, Alexander and Schubert, Ludwig},
 year = {2017},
