--- a/TFM_tex/tfg.tex
+++ b/TFM_tex/tfg.tex
@@ -12,6 +12,9 @@
 
 
 
+\usepackage[table]{xcolor} % agregar al preámbulo
+\usepackage{colortbl}      % para rowcolor
+
 \usepackage[]{graphicx}
 \usepackage{eurosym}
 \usepackage[]{wrapfig}
